--- a/index.html
+++ b/index.html
@@ -31,16 +31,10 @@
 
   // Étapes du tour de Méditerranée
   var route = [
-    [43.889, 8.039],     // Imperia
-    [41.9186, 8.7386],     // Ajaccio
-    [40.8518, 14.2681],    // Naples
-    [38.1157, 13.3615],    // Palerme
-    [37.9838, 23.7275],    // Athènes
-    [36.8000, 27.1333],    // Kos
-    [36.8663, 30.7056],    // Antalya
-    [35.8997, 14.5146],    // La Valette (Malte)
-    [36.8188, 10.1658],    // Tunis
-    [43.2965, 5.3698]      // Retour Marseille
+    [43.879411, 8.027154],     // Imperia
+    [42.966040, 9.349612],     // Port de Centuri
+    [42.679481, 9.299814],    // Port de Saint Florent
+       
   ];
 
   // Tracé de la route
@@ -52,15 +46,10 @@
 
   // Marqueurs avec noms
   var escales = [
-    { coords: [43.889, 8.039], nom: "Imperia, Italie" },
-    { coords: [41.9186, 8.7386], nom: "Ajaccio" },
-    { coords: [40.8518, 14.2681], nom: "Naples" },
-    { coords: [38.1157, 13.3615], nom: "Palerme" },
-    { coords: [37.9838, 23.7275], nom: "Athènes" },
-    { coords: [36.8000, 27.1333], nom: "Kos" },
-    { coords: [36.8663, 30.7056], nom: "Antalya" },
-    { coords: [35.8997, 14.5146], nom: "La Valette (Malte)" },
-    { coords: [36.8188, 10.1658], nom: "Tunis" }
+    { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
+    { coords: [42.966040, 9.349612], nom: "Port de Centuri" },
+    { coords: [42.679481, 9.299814], nom: "Port de Saint Florent" },
+   
   ];
 
   escales.forEach(function(escale) {
