--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   // Étapes du tour de Méditerranée
   var route = [
     [43.879411, 8.027154],     // Imperia
+    [43.848084, 7.970238],
+    [43.814402, 7.834969],
+    [43.815571, 7.787633],     //Port de Sanremo
     [42.966040, 9.349612],     // Port de Centuri
     [42.967909,9.348335],
     [42.965585,9.338593],
@@ -50,6 +53,7 @@
   // Marqueurs avec noms
   var escales = [
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
+    { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie" },
     { coords: [42.966040, 9.349612], nom: "Port de Centuri" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent" },
    
