--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     [43.879411, 8.027154],     // Imperia
     [43.848084, 7.970238],
     [43.814402, 7.834969],
-    [43.815571, 7.787633],     //Port de Sanremo
+    [43.815571, 7.787633],     // Port de Sanremo
+    [43.772271, 7.675323],     
+    [43.780179, 7.556695],     // Mouillage de midi Capo Mortola, Villa/jardin Hanbury
+    [43.777532, 7.512288],     // Menton, Vieux Port
+    [43.699623, 7.310854],     // Villefranche sur Mer, Port de la Darse
     [42.966040, 9.349612],     // Port de Centuri
     [42.967909,9.348335],
     [42.965585,9.338593],
@@ -54,6 +58,9 @@
   var escales = [
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
     { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie" },
+    { coords: [43.780179, 7.556695], nom: "Mouillage de midi Capo Mortola, Villa/jardin Hanbury" },
+    { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port" }
+    { coords: [43.699623, 7.310854], nom: "Villefranche sur Mer, Port de la Darse" }
     { coords: [42.966040, 9.349612], nom: "Port de Centuri" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent" },
    
