--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
     { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie" },
     { coords: [43.780179, 7.556695], nom: "Mouillage de midi Capo Mortola, Villa/jardin Hanbury" },
-    { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port" }
-    { coords: [43.699623, 7.310854], nom: "Villefranche sur Mer, Port de la Darse" }
+    { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port" },
+    { coords: [43.699623, 7.310854], nom: "Villefranche sur Mer, Port de la Darse" },
     { coords: [42.966040, 9.349612], nom: "Port de Centuri" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent" },
    
