--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     [43.772271, 7.675323],     
     [43.780179, 7.556695],     // Mouillage de midi Capo Mortola, Villa/jardin Hanbury
     [43.777532, 7.512288],     // Menton, Vieux Port
+    [43.747584, 7.491131],
+    [43.671271, 7.323761],     
     [43.699623, 7.310854],     // Villefranche sur Mer, Port de la Darse
+    [43.879411, 8.027154],     // Imperia
     [42.966040, 9.349612],     // Port de Centuri
     [42.967909,9.348335],
     [42.965585,9.338593],
@@ -61,6 +64,7 @@
     { coords: [43.780179, 7.556695], nom: "Mouillage de midi Capo Mortola, Villa/jardin Hanbury" },
     { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port" },
     { coords: [43.699623, 7.310854], nom: "Villefranche sur Mer, Port de la Darse" },
+    { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
     { coords: [42.966040, 9.349612], nom: "Port de Centuri" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent" },
    
