--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     [43.808463, 8.104284],
     [43.879411, 8.027154],     // Imperia
     [43.953220, 8.180008],
-    [43.970700, 8.166661],
+    [43.970700, 8.166661],     // Mouillage Capo Mele
     [43.951490, 8.190651],
+    [43.879411, 8.027154],     // Imperia
     [42.966040, 9.349612],     // Port de Centuri
     [42.967909,9.348335],
     [42.965585,9.338593],
@@ -69,6 +70,8 @@
     { coords: [43.780179, 7.556695], nom: "Mouillage de midi Capo Mortola, Villa/jardin Hanbury" },
     { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port" },
     { coords: [43.699623, 7.310854], nom: "Villefranche sur Mer, Port de la Darse" },
+    { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
+    { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele, Italie" },
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
     { coords: [42.966040, 9.349612], nom: "Port de Centuri" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent" },
