--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   // Marqueurs avec noms
   var escales = [
-    { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
+    { coords: [43.879411, 8.027154], nom: "Imperia, Italie", date:"29 avril 2025" },
     { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie" },
     { coords: [43.780179, 7.556695], nom: "Mouillage de midi Capo Mortola, Villa/jardin Hanbury" },
     { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port" },
