--- a/index.html
+++ b/index.html
@@ -71,18 +71,17 @@
 
   // Marqueurs avec noms
   var escales = [
-    { coords: [43.879411, 8.027154], nom: "Imperia, Italie", date: "29 avril 2025" },
-    { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie" },
-    { coords: [43.780179, 7.556695], nom: "Mouillage de midi Capo Mortola, Villa/jardin Hanbury" },
-    { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port" },
-    { coords: [43.699623, 7.310854], nom: "Villefranche sur Mer, Port de la Darse" },
-    { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
-    { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele, Italie" },
-    { coords: [43.879411, 8.027154], nom: "Imperia, Italie" },
-    { coords: [42.966040, 9.349612], nom: "Port de Centuri" },
-    { coords: [42.679481, 9.299814], nom: "Port de Saint Florent" },
-   
-  ];
+  { coords: [43.879411, 8.027154], nom: "Imperia, Italie", date: "29 avril 2025" },
+  { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie", date: "30 avril 2025" },
+  { coords: [43.780179, 7.556695], nom: "Mouillage Capo Mortola", date: "1er mai 2025" },
+  { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port", date: "2 mai 2025" },
+  { coords: [43.699623, 7.310854], nom: "Villefranche-sur-Mer", date: "3 mai 2025" },
+  { coords: [43.879411, 8.027154], nom: "Imperia (retour)", date: "4 mai 2025" },
+  { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele", date: "5 mai 2025" },
+  { coords: [43.879411, 8.027154], nom: "Imperia", date: "6 mai 2025" },
+  { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "7 mai 2025" },
+  { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "8 mai 2025" }
+];
 
   escales.forEach(function(escale) {
   var contenu = `
