--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     attribution: '© OpenStreetMap contributors'
   }).addTo(map);
 
+  // Nouvelle icône : ancre marine
   var iconeEscale = L.icon({
-    iconUrl: 'https://cdn-icons-png.flaticon.com/512/69/69524.png',
+    iconUrl: 'https://cdn-icons-png.flaticon.com/512/854/854894.png',
     iconSize: [25, 25],
     iconAnchor: [12, 25],
     popupAnchor: [0, -25]
