--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     [43.879411, 8.027154], [43.888162, 8.068321], [43.953220, 8.180008], [43.970700, 8.166661],
     [43.951490, 8.190651], [43.886105, 8.068943], [43.879411, 8.027154], [42.966040, 9.349612],
     [42.967909, 9.348335], [42.965585, 9.338593], [42.838087, 9.289627], [42.679481, 9.299814], 
-    [42.708670,9.270079]
+    [42.708670, 9.270079], [42.738030, 9.227829], [42.739417, 9.163799], [42.729627, 9.134724],
+    [42.734121, 9.117966], [42.647439, 8.929653], [42.607622, 8.790779], [42.565689, 8.762498],
   ];
 
   var polyline = L.polyline(route, {
@@ -52,7 +53,9 @@
     { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele", date: "10 mai 2025" },
     { coords: [43.879411, 8.027154], nom: "Imperia", date: "29 avril 2025" },
     { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025" },
-    { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "11 juin 2025" }
+    { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "11 juin 2025" },
+    { coords: [42.729627, 9.134724], nom: "Mouillage journée plage de Ghignu", date: "14 juin 2025" },
+    { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025" }
   ];
 
   escales.forEach(function(escale) {
