--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "11 juin 2025" },
     { coords: [42.729627, 9.134724], nom: "Mouillage journée plage de Ghignu", date: "14 juin 2025" },
-    { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025" }
+    { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025" },
+    { coords: [42.349433, 8.614150], nom: "Port de Girolata", date: "19 juin 2025" }
   ];
 
   escales.forEach(function(escale) {
