--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     opacity: 0.8
   }).addTo(map);
 
+  map.fitBounds(polyline.getBounds());
+
   var escales = [
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie", date: "29 avril 2025" },
     { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie", date: "2 mai 2025" },
