--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     opacity: 0.8
   }).addTo(map);
 
-  map.fitBounds(polyline.getBounds());
+  map.fitBounds(polyline.getBounds(), { padding: [20, 20] });
 
   var escales = [
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie", date: "29 avril 2025" },
