--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<h1 style="text-align: center;">Tour de Méditerranée à la voile — Andyboat</h1>
+<h1 style="
+  text-align: center;
+  font-family: 'Georgia', serif;
+  font-size: 2em;
+  margin: 1rem 0;
+  color: #2c3e50;
+">
+  Tour de Méditerranée à la voile — Andyboat
+</h1>
 <!DOCTYPE html>
 <html>
 <head>
