--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     opacity: 0.8
   }).addTo(map);
 
-  map.fitBounds(polyline.getBounds(), { padding: [20, 20] });
+  map.fitBounds(polyline.getBounds(), {
+  paddingTopLeft: [100, 200],
+  paddingBottomRight: [300, 100]
+});
 
   var escales = [
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie", date: "29 avril 2025" },
