--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<h1 style="
-  text-align: center;
-  font-family: 'Georgia', serif;
-  font-size: 2em;
-  margin: 1rem 0;
-  color: #2c3e50;
-">
-  Tour de Méditerranée à la voile — Andyboat
-</h1>
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,14 +7,29 @@
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    h1 {
+      text-align: center;
+      font-family: 'Georgia', serif;
+      font-size: 2em;
+      margin: 1rem 0;
+      color: #2c3e50;
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 0.5rem;
+    }
     #map {
-      height: 100vh;
+      height: calc(100vh - 100px); /* laisse la place pour le titre */
       width: 100%;
     }
   </style>
 </head>
 <body>
-
+  
+<h1>Tour de Méditerranée à la voile — Andyboat</h1>
 <div id="map"></div>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -85,7 +91,6 @@
     L.marker(escale.coords).addTo(map).bindPopup(contenu);
   });
 
-  map.fitBounds(polyline.getBounds());
 </script>
 
 </body>
