--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [43.879411, 8.027154], nom: "Imperia (retour)", date: "29 avril 2025" },
     { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele", date: "10 mai 2025" },
     { coords: [43.879411, 8.027154], nom: "Imperia", date: "29 avril 2025" },
-    { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025" },
+    { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025", image:"https://static.wixstatic.com/media/e51b28_10ab574495214984ac4bb73c24ae73bf~mv2.jpg" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "11 juin 2025", image:"https://static.wixstatic.com/media/e51b28_cf7f61ed1919498e8e52475d0e61bcbd~mv2.jpg" },
     { coords: [42.729627, 9.134724], nom: "Mouillage journée plage de Ghignu", date: "14 juin 2025" },
     { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025" },
