--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "11 juin 2025", image:"https://static.wixstatic.com/media/e51b28_cf7f61ed1919498e8e52475d0e61bcbd~mv2.jpg" },
     { coords: [42.729627, 9.134724], nom: "Mouillage journée plage de Ghignu", date: "14 juin 2025" },
     { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025" },
-    { coords: [42.349433, 8.614150], nom: "Port de Girolata", date: "19 juin 2025" },
+    { coords: [42.349433, 8.614150], nom: "Port de Girolata", date: "19 juin 2025", image:"https://static.wixstatic.com/media/e51b28_ac2e2b1d437449c2b3c48201fd0842a7~mv2.jpg" },
     { coords: [42.236466, 8.559100], nom: "Mouillage Anse San Pellegrinu, Cap Rossu Nord ", date: "20 juin 2025", image:"https://static.wixstatic.com/media/e51b28_f91d5fc026354becb9261a90a4deea97~mv2.jpg" },
   ];
 
