--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025" },
     { coords: [42.349433, 8.614150], nom: "Port de Girolata", date: "19 juin 2025", image:"https://static.wixstatic.com/media/e51b28_ac2e2b1d437449c2b3c48201fd0842a7~mv2.jpg" },
     { coords: [42.236466, 8.559100], nom: "Mouillage Anse San Pellegrinu, Cap Rossu Nord ", date: "20 juin 2025", image:"https://static.wixstatic.com/media/e51b28_f91d5fc026354becb9261a90a4deea97~mv2.jpg" },
+    { coords: [42.130883, 8.597116], nom: "Port de Cargèse", date: "21 juin 2025" },
+
   ];
 
   escales.forEach(function(escale) {
