--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [43.699623, 7.310854], nom: "Villefranche-sur-Mer", date: "4 mai 2025", image:"https://static.wixstatic.com/media/e51b28_59a9845390e948ea84f115d7daff3471~mv2.jpeg"},
     { coords: [43.879411, 8.027154], nom: "Imperia (retour)", date: "29 avril 2025" },
     { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele", date: "10 mai 2025" },
-    { coords: [43.879411, 8.027154], nom: "Imperia", date: "29 avril 2025" },
+    { coords: [43.879411, 8.027154], nom: "Imperia", date: "29 avril 2025", image:"https://static.wixstatic.com/media/e51b28_3d3d39a1ebcc410a8536746cdd50d835~mv2.jpg" },
     { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025", image:"https://static.wixstatic.com/media/e51b28_10ab574495214984ac4bb73c24ae73bf~mv2.jpg" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "11 juin 2025", image:"https://static.wixstatic.com/media/e51b28_cf7f61ed1919498e8e52475d0e61bcbd~mv2.jpg" },
     { coords: [42.729627, 9.134724], nom: "Mouillage journée plage de Ghignu", date: "14 juin 2025", image:"https://static.wixstatic.com/media/e51b28_4326c7a1d6c6469a9ef50f3424398c9c~mv2.jpg" },
