--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [43.780179, 7.556695], nom: "Mouillage Capo Mortola", date: "3 mai 2025", image:"https://static.wixstatic.com/media/e51b28_d9b9eca3b13941a480625447540fb85f~mv2.jpeg" },
     { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port", date: "3 mai 2025", image:"https://static.wixstatic.com/media/e51b28_64aa35827fc84f1fb5ebb058c9df3857~mv2.jpg" },
     { coords: [43.699623, 7.310854], nom: "Villefranche-sur-Mer", date: "4 mai 2025", image:"https://static.wixstatic.com/media/e51b28_59a9845390e948ea84f115d7daff3471~mv2.jpeg"},
-    { coords: [43.879411, 8.027154], nom: "Imperia (retour)", date: "29 avril 2025", image:"https://static.wixstatic.com/media/e51b28_3d3d39a1ebcc410a8536746cdd50d835~mv2.jpg" },
+    { coords: [43.879411, 8.027154], nom: "Imperia", date: "29 avril 2025", image:"https://static.wixstatic.com/media/e51b28_3d3d39a1ebcc410a8536746cdd50d835~mv2.jpg" },
     { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele", date: "10 mai 2025", image:"https://static.wixstatic.com/media/e51b28_a98e80caa530442bb828afc7cad3beab~mv2.jpg" },
     { coords: [43.879411, 8.027154], nom: "Imperia", date: "29 avril 2025", image:"https://static.wixstatic.com/media/e51b28_3d3d39a1ebcc410a8536746cdd50d835~mv2.jpg" },
     { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025", image:"https://static.wixstatic.com/media/e51b28_10ab574495214984ac4bb73c24ae73bf~mv2.jpg" },
