--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
 
   var escales = [
     { coords: [43.879411, 8.027154], nom: "Imperia, Italie", date: "29 avril 2025", image:"https://static.wixstatic.com/media/e51b28_3d3d39a1ebcc410a8536746cdd50d835~mv2.jpg" },
-    { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie", date: "2 mai 2025" },
+    { coords: [43.815571, 7.787633], nom: "Port de Sanremo, Italie", date: "2 mai 2025", image:"https://static.wixstatic.com/media/e51b28_e1f38c6852844ef78efffc7548ae5a2f~mv2.jpg" },
     { coords: [43.780179, 7.556695], nom: "Mouillage Capo Mortola", date: "3 mai 2025", image:"https://static.wixstatic.com/media/e51b28_d9b9eca3b13941a480625447540fb85f~mv2.jpeg" },
     { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port", date: "3 mai 2025", image:"https://static.wixstatic.com/media/e51b28_64aa35827fc84f1fb5ebb058c9df3857~mv2.jpg" },
     { coords: [43.699623, 7.310854], nom: "Villefranche-sur-Mer", date: "4 mai 2025", image:"https://static.wixstatic.com/media/e51b28_59a9845390e948ea84f115d7daff3471~mv2.jpeg"},
