--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [43.777532, 7.512288], nom: "Menton, Vieux Port", date: "3 mai 2025", image:"https://static.wixstatic.com/media/e51b28_64aa35827fc84f1fb5ebb058c9df3857~mv2.jpg" },
     { coords: [43.699623, 7.310854], nom: "Villefranche-sur-Mer", date: "4 mai 2025", image:"https://static.wixstatic.com/media/e51b28_59a9845390e948ea84f115d7daff3471~mv2.jpeg"},
     { coords: [43.970700, 8.166661], nom: "Mouillage Capo Mele", date: "10 mai 2025", image:"https://static.wixstatic.com/media/e51b28_a98e80caa530442bb828afc7cad3beab~mv2.jpg" },
-    { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025", image:"https://static.wixstatic.com/media/e51b28_10ab574495214984ac4bb73c24ae73bf~mv2.jpg" },
+    { coords: [42.966040, 9.349612], nom: "Port de Centuri", date: "10 juin 2025", image:"https://static.wixstatic.com/media/e51b28_10ab574495214984ac4bb73c24ae73bf~mv2.jpg",lien:"https://www.andyboat.com/post/centuri" },
     { coords: [42.679481, 9.299814], nom: "Port de Saint Florent", date: "11 juin 2025", image:"https://static.wixstatic.com/media/e51b28_cf7f61ed1919498e8e52475d0e61bcbd~mv2.jpg" },
     { coords: [42.729627, 9.134724], nom: "Mouillage journée plage de Ghignu", date: "14 juin 2025", image:"https://static.wixstatic.com/media/e51b28_4326c7a1d6c6469a9ef50f3424398c9c~mv2.jpg" },
     { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025", image: "https://static.wixstatic.com/media/e51b28_80120ea6eba94ca0bdc28a119be093ab~mv2.jpg", lien:"https://www.andyboat.com/post/calvi" },
