--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     if (escale.image) {
     contenu += "<br><img src='" + escale.image + "' style='width:100%; max-width:250px; height:auto; margin-top:5px; border-radius:4px;'>";
   }
+    
+    if (escale.lien) {
+  contenu += "<br><a href='" + escale.lien + "' target='_blank' style='display:inline-block; margin-top:5px; color:#2c3e50; text-decoration:underline;'>Lire l'article</a>";
+}
 
     L.marker(escale.coords).addTo(map).bindPopup(contenu);
   });
