--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
     h1 {
       text-align: center;
-      font-family: 'Georgia', serif;
-      font-size: 2em;
-      margin: 1rem 0;
-      color: #2c3e50;
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 0.5rem;
+  font-family: 'Georgia', serif;
+  font-size: 2em;
+  margin: 1rem 0;
+  color: #2c3e50;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 0.5rem 1rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     }
     #map {
       height: calc(100vh - 100px); /* laisse la place pour le titre */
