--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     body {
-      margin: 0;
-      font-family: sans-serif;
+       margin: 0;
+  font-family: 'Helvetica', sans-serif;
+  background-color: #f4f8fb;
     }
 
     h1 {
