--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     }
     #map {
-      height: calc(100vh - 100px); /* laisse la place pour le titre */
-      width: 100%;
+      height: calc(100vh - 120px); /* Ajuster si besoin */
+  width: 95%;
+  margin: 0 auto;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  border: 2px solid #ddd;
     }
   </style>
 </head>
