--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
   border-radius: 15px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   border: 2px solid #ddd;
+       .leaflet-popup-content {
+      font-family: 'Arial', sans-serif;
+      font-size: 14px;
+      color: #333;
+    }
+
+    .leaflet-popup-content img {
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    }
+
+    .leaflet-popup-content b {
+      color: #2c3e50;
+      font-size: 16px;
     }
   </style>
 </head>
