--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   border: 2px solid #ddd;
       }
     
+        /* 🎯 Styles des popups */
        .leaflet-popup-content {
       font-family: 'Arial', sans-serif;
       font-size: 14px;
