--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 <script>
   var map = L.map('map').setView([38.5, 15.0], 5);
 
+  map.touchZoom.enable();
+
+map.on('popupopen', function () {
+  map.touchZoom.enable();
+});
+map.on('popupclose', function () {
+  map.touchZoom.enable();
+});
+
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '© OpenStreetMap contributors'
   }).addTo(map);
