--- a/index.html
+++ b/index.html
@@ -60,14 +60,12 @@
 <script>
   var map = L.map('map').setView([38.5, 15.0], 5);
 
+ function reactiverZoom() {
   map.touchZoom.enable();
+}
 
-map.on('popupopen', function () {
-  map.touchZoom.enable();
-});
-map.on('popupclose', function () {
-  map.touchZoom.enable();
-});
+map.on('popupopen', reactiverZoom);
+map.on('popupclose', reactiverZoom);
 
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '© OpenStreetMap contributors'
