--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@ var marker = L.marker(escale.coords, { icon: getIconByZoom(map.getZoom()) })
   map.on('zoomend moveend', function () {
     var currentZoom = map.getZoom();
     var bounds = map.getBounds();
+    
+var map = L.map('map').setView([38.5, 15.0], 5);
 
     function getIconByZoom(zoom) {
   const size = Math.max(20, Math.min(zoom * 5, 50)); // Taille entre 20px et 50px
