--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-  var map = L.map('map').setView([38.5, 15.0], 5);
+var map = L.map('map').setView([38.5, 15.0], 5);
+
+function getIconByZoom(zoom) {
+  const size = Math.max(20, Math.min(zoom * 5, 50));
+  return L.icon({
+    iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png',
+    iconSize: [size, size],
+    iconAnchor: [size / 2, size],
+    popupAnchor: [0, -size / 2]
+  });
+}
 
  function reactiverZoom() {
   map.touchZoom.enable();
@@ -178,14 +188,6 @@ var marker = L.marker(escale.coords, { icon: getIconByZoom(map.getZoom()) })
   map.on('zoomend moveend', function () {
     var currentZoom = map.getZoom();
     var bounds = map.getBounds();
-    
-    function getIconByZoom(zoom) {
-  const size = Math.max(20, Math.min(zoom * 5, 50)); // Taille entre 20px et 50px
-  return L.icon({
-    iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png', // Remplace par ton image si tu veux
-    iconSize: [size, size],
-    iconAnchor: [size / 2, size],
-    popupAnchor: [0, -size / 2]
   });
 }
 
