--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ var map = L.map('map').setView([38.5, 15.0], 5);
 function getIconByZoom(zoom) {
   const size = Math.max(20, Math.min(zoom * 5, 50));
   return L.icon({
-    iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png',
+    iconUrl: 'https://raw.githubusercontent.com/ChrisFanny/andyboat-icons/main/icon.svg',
     iconSize: [size, size],
     iconAnchor: [size / 2, size],
     popupAnchor: [0, -size / 2]
