--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       color: #2c3e50;
       font-size: 16px;
     }
+    
+    .leaflet-marker-icon {
+  cursor: pointer;
+}
+
   </style>
 </head>
 <body>
