--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
     }
     
     .leaflet-marker-icon {
+transition: transform 0.2s ease, box-shadow 0.2s ease;
   cursor: pointer;
 }
+
+.leaflet-marker-icon:hover {
+  transform: scale(1.15);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.5);}
 
   </style>
 </head>
