--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@ var map = L.map('map').setView([38.5, 15.0], 5);
 function getIconByZoom(zoom) {
   const size = Math.max(25, Math.min(zoom * 5, 50)); // Ajuste entre 25 et 50px
 
-  return L.icon({
-    iconUrl: 'https://raw.githubusercontent.com/ChrisFanny/andyboat-icons/main/icon.svg',
+  return L.divIcon({
+    html: `<img src="https://raw.githubusercontent.com/ChrisFanny/andyboat-icons/main/icon.svg" 
+               style="width:${size}px; height:${size}px;">`,
     iconSize: [size, size],
-    iconAnchor: [size / 2, size],
-    popupAnchor: [0, -size / 2]
+    className: ''  // Supprime les styles par défaut de Leaflet
   });
 }
 
