--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ transition: transform 0.2s ease, box-shadow 0.2s ease;
   transform: scale(1.15);
   box-shadow: 0 4px 12px rgba(0,0,0,0.5);}
 
+    .leaflet-div-icon {
+    background: transparent;
+    border: none;
+  }
+
   </style>
 </head>
 <body>
