--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@ transition: transform 0.2s ease, box-shadow 0.2s ease;
     background: transparent;
     border: none;
   }
+    
+    .leaflet-div-icon:hover {
+    transform: scale(1.15);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    cursor: pointer;
+  }
 
   </style>
 </head>
